@@ -4,7 +4,9 @@ sdk_HEADERS = exa.h
 
 libexa_la_LDFLAGS = -avoid-version
 
-INCLUDES = $(XORG_INCS)
+INCLUDES = \
+	$(XORG_INCS) \
+	-I$(srcdir)/../../../miext/cw
 
 AM_CFLAGS = $(XORG_CFLAGS)
 
