@@ -1,3 +1,8 @@
+2005-10-02  Eric Anholt  <anholt@FreeBSD.org>
+
+	* hw/xfree86/exa/Makefile.am:
+	Fix include path for commit of bug #4616.
+
 2005-09-28  Alan Coopersmith  <alan.coopersmith@sun.com>
 
 	* configure.ac: 
